--- a/src/css/Home.css
+++ b/src/css/Home.css
@@ -19,6 +19,7 @@ main .container {
   width: 100%;
   padding: 0 30px;
   margin-top: 20px;
+  margin-bottom:40px;
 }
 main .container table {
   border-collapse: collapse;
