--- a/src/css/Home.scss
+++ b/src/css/Home.scss
@@ -21,6 +21,7 @@ main {
     width: 100%;
     padding: 0 30px;
     margin-top: 20px;
+    margin-bottom: 40px;
 
     table {
       border-collapse: collapse;
