--- a/src/css/Home.scss
+++ b/src/css/Home.scss
@@ -27,6 +27,7 @@ main {
       border-collapse: collapse;
       width: 100%;
       color: white;
+      position: relative;
 
       thead {
         tr {
