--- a/src/css/Home.scss
+++ b/src/css/Home.scss
@@ -12,9 +12,45 @@ main {
       font-size: 25px;
     }
 
-    .p {
+    .welcome {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      font-size: 30px;
       color: rgb(53, 225, 255);
-      font-size: 16px;
+
+      p {
+        padding-left: 10px;
+        font-size: 16px;
+        color: rgb(235, 235, 235);
+      }
+    }
+
+    .end {
+      display: flex;
+
+      .p {
+        color: rgb(53, 225, 255);
+        font-size: 16px;
+        margin-right: 20px;
+      }
+
+      .logout {
+        background-color: rgb(57, 218, 247);
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        border: none;
+        border-radius: 8px;
+        cursor: pointer;
+        outline: none;
+
+        svg {
+          color: white;
+          margin: 10px;
+          font-size: 20px;
+        }
+      }
     }
   }
   .container {
