--- a/src/css/Home.css
+++ b/src/css/Home.css
@@ -7,6 +7,11 @@ main header {
   align-items: center;
   padding: 15px 20px;
 }
+@media screen and (max-width: 500px) {
+  main header h1 {
+    font-size: 11px;
+  }
+}
 main header h1 {
   color: rgb(53, 225, 255);
   font-size: 25px;
@@ -25,6 +30,11 @@ main header .welcome p {
 }
 main header .end {
   display: flex;
+}
+@media screen and (max-width: 500px) {
+  main header .end .p {
+    display: none;
+  }
 }
 main header .end .p {
   color: rgb(53, 225, 255);
@@ -96,7 +106,7 @@ main .container table tbody .status {
     padding: 10px;
   }
   header h1 {
-    font-size: 20px;
+    font-size: 17px;
   }
   header .p {
     font-size: 11px;
