--- a/src/css/Home.scss
+++ b/src/css/Home.scss
@@ -7,6 +7,12 @@ main {
     align-items: center;
     padding: 15px 20px;
 
+    @media screen and (max-width: 500px) {
+      h1 {
+        font-size: 11px;
+      }
+    }
+
     h1 {
       color: rgb(53, 225, 255);
       font-size: 25px;
@@ -28,6 +34,12 @@ main {
 
     .end {
       display: flex;
+
+      @media screen and (max-width: 500px) {
+        .p {
+          display: none;
+        }
+      }
 
       .p {
         color: rgb(53, 225, 255);
@@ -118,7 +130,7 @@ main {
     display: block;
     padding: 10px;
     h1 {
-      font-size: 20px;
+      font-size: 17px;
     }
 
     .p {
