--- a/src/css/Login.css
+++ b/src/css/Login.css
@@ -28,7 +28,7 @@
 }
 @media screen and (max-width: 500px) {
   .container-login .form-container {
-    width: 115%;
+    width: 100%;
     height: 100%;
     transform: scale(1);
     padding: 20px 60px;
@@ -53,6 +53,7 @@
 @media screen and (max-width: 500px) {
   .container-login .form-container .logo {
     padding-bottom: 25px;
+    letter-spacing: 5px;
   }
 }
 .container-login .form-container .img {
