--- a/src/css/Login.scss
+++ b/src/css/Login.scss
@@ -25,7 +25,7 @@
     }
 
     @media screen and (max-width: 500px) {
-      width: 115%;
+      width: 100%;
       height: 100%;
       transform: scale(1);
       padding: 20px 60px;
@@ -46,6 +46,7 @@
 
       @media screen and (max-width: 500px) {
         padding-bottom: 25px;
+        letter-spacing: 5px;
       }
     }
 
