--- a/src/css/Home.css
+++ b/src/css/Home.css
@@ -7,11 +7,6 @@ main header {
   align-items: center;
   padding: 15px 20px;
 }
-@media screen and (max-width: 500px) {
-  main header h1 {
-    font-size: 11px;
-  }
-}
 main header h1 {
   color: rgb(53, 225, 255);
   font-size: 25px;
@@ -30,11 +25,6 @@ main header .welcome p {
 }
 main header .end {
   display: flex;
-}
-@media screen and (max-width: 500px) {
-  main header .end .p {
-    display: none;
-  }
 }
 main header .end .p {
   color: rgb(53, 225, 255);
@@ -122,5 +112,16 @@ main .container table tbody .status {
   }
   table tbody tr td {
     padding: 5px;
+  }
+}
+@media screen and (max-width: 500px) {
+  main header h1 {
+    font-size: 18px;
+  }
+  main header .welcome {
+    display: none;
+  }
+  main header .end .p {
+    font-size: 12px;
   }
 }/*# sourceMappingURL=Home.css.map */
