--- a/src/css/Login.scss
+++ b/src/css/Login.scss
@@ -18,6 +18,7 @@
     display: flex;
     flex-direction: column;
     padding: 40px 60px;
+    padding-top: 20px;
     transform: scale(0.9);
 
     @media screen and (min-width: 501px) {
@@ -36,11 +37,11 @@
     }
 
     .logo {
-      font-size: 35px;
+      font-size: 30px;
       text-align: center;
       width: 100%;
       letter-spacing: 10px;
-      padding-bottom: 40px;
+      padding-bottom: 30px;
       color: rgb(53, 225, 255);
       user-select: none;
 
@@ -58,8 +59,8 @@
       padding-bottom: 10px;
 
       .loader-img {
-        width: 80px;
-        height: 80px;
+        width: 60px;
+        height: 60px;
         object-fit: contain;
         margin: 0;
         padding: 0;
